[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://2D Pixel Dungeon Asset Pack/PressStart2P.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HUDContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 30.0
margin_top = 10.0
margin_right = -30.0

[node name="VidasContainer" type="VBoxContainer" parent="HUDContainer"]
margin_right = 80.0
margin_bottom = 36.0

[node name="VidasTexto" type="Label" parent="HUDContainer/VidasContainer"]
margin_right = 80.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 186, 35 )
custom_fonts/font = SubResource( 1 )
text = "Vidas"
align = 1
valign = 1

[node name="VidasValor" type="Label" parent="HUDContainer/VidasContainer"]
margin_top = 20.0
margin_right = 80.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 186, 35 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="HUDContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 84.0
margin_right = 216.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="TempoContainer" type="VBoxContainer" parent="HUDContainer"]
margin_left = 220.0
margin_right = 300.0
margin_bottom = 36.0

[node name="TempoText" type="Label" parent="HUDContainer/TempoContainer"]
margin_right = 80.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 186, 35 )
custom_fonts/font = SubResource( 3 )
text = "Tempo"
align = 1
valign = 1

[node name="TempoValor" type="Label" parent="HUDContainer/TempoContainer"]
margin_top = 20.0
margin_right = 80.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 186, 35 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="HSeparator2" type="HSeparator" parent="HUDContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 304.0
margin_right = 436.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="PontosContainer" type="VBoxContainer" parent="HUDContainer"]
margin_left = 440.0
margin_right = 536.0
margin_bottom = 36.0

[node name="PontosTexto" type="Label" parent="HUDContainer/PontosContainer"]
margin_right = 96.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 186, 35 )
custom_fonts/font = SubResource( 5 )
text = "Pontos"
align = 1
valign = 1

[node name="PontosValor" type="Label" parent="HUDContainer/PontosContainer"]
margin_top = 20.0
margin_right = 96.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 186, 35 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="HSeparator3" type="HSeparator" parent="HUDContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 540.0
margin_right = 672.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="PontosNecessariosContainer" type="VBoxContainer" parent="HUDContainer"]
margin_left = 676.0
margin_right = 964.0
margin_bottom = 36.0

[node name="PontosNecessariosTexto" type="Label" parent="HUDContainer/PontosNecessariosContainer"]
margin_right = 288.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 186, 35 )
custom_fonts/font = SubResource( 5 )
text = "Pontos Necess√°rios"
align = 1
valign = 1

[node name="PontosNecessariosValor" type="Label" parent="HUDContainer/PontosNecessariosContainer"]
margin_top = 20.0
margin_right = 288.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 186, 35 )
custom_fonts/font = SubResource( 6 )
text = "5"
align = 1
valign = 1
